<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meister Lampe</string>
    <string name="main_channels">Channel Setup</string>
    <string name="main_help">Set to Sweep</string>
    <string name="main_xyTab">Time Controller</string>
    <string name="main_quit">Quit</string>
    <string name="sweepeditor">Sweep Editor</string>
    <string name="se_restartsweep">Restart Sweep</string>
    <string name="se_moveall">Move all</string>
    <string name="not_connected">Status: not connected</string>
    <string name="connected">Status: connected</string>
    <string name="connecting">Status: connecting</string>
    <string name="none">Status: none</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_error_log">Error Log</string>
    <string name="menu_bugreport">Bug report</string>
    <string name="menu_reset">Reset Hardware</string>
    <string name="title_activity_error_log">Error log viewer</string>
    <string name="title_activity_mlcoord_view">Time Controller</string>
    <string name="tab_controller">Tab controller</string>
    <string name="no_default_device_found">No default device found. Please use the menu to connect your device</string>
    <string name="trying_to_connect">Trying to connect</string>
    <string name="title_activity_mlsettings">Settings</string>
    <string name="menu_reconnect">Reconnect</string>
    <string name="sending_to_module_failed">Sending to module failed</string>
    <string name="title_activity_mlchannel_setup">Single channel setup</string>
    <string name="func_sweeping">Sweeping</string>
    <string name="func_fading_in">Fading In</string>
    <string name="func_fading_out">Fading Out</string>
    <string name="getting_channel_values">Getting channel values</string>
    <string name="channel_number">Channel number</string>
    <string name="main_readout">Readout Lamp</string>
    <string name="title_activity_channel_overview">ChannelOverview</string>
    <string name="no_bluetooth">This device does not support bluetooth!</string>
    <string name="connect_first_time">You are connecting the first time, setup your light first.</string>
    <string name="setup_string">~ connect ~</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_function">FunctionActivity</string>
    <string name="function_selection_description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="title_activity_level">LevelActivity</string>
    <string name="connecting_please_wait">Connecting please wait...</string>
    <string name="trying_to_setup_a_connection">Trying to setup a connection</string>

</resources>