<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="1"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_reconnect"
        android:orderInCategory="1"
        android:title="@string/menu_reconnect"/>
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="2"
        android:title="@string/menu_about"/>
    <item
        android:id="@+id/menu_error_log"
        android:orderInCategory="3"
        android:title="@string/menu_error_log"/>
    <item
        android:id="@+id/menu_bugreport"
        android:orderInCategory="4"
        android:title="@string/menu_bugreport"/>
    <item
        android:id="@+id/menu_reset"
        android:orderInCategory="4"
        android:title="@string/menu_reset"/>

</menu>